--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+
+TeamProject/TeamProject/SmtpMessageChunk
+TeamProject/SmtpMessageChunk.cs
