Add BranchFacilitiesManager + BranchFacilities + ProjectDbContext.BranchFacilities

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -246,6 +246,8 @@
     <Compile Include="Areas\Admin\Controllers\TimeSlotsController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Dal\TeamProjectApp.cs" />
+    <Compile Include="Models\BranchFacilities.cs" />
+    <Compile Include="Models\BranchFacilitiesManager.cs" />
     <Compile Include="SmtpMessageChunk.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
