--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Dal\TeamProjectApp.cs" />
     <Compile Include="Models\BranchFacilities.cs" />
     <Compile Include="Models\BranchFacilitiesManager.cs" />
+    <Compile Include="Models\FacilityFormModel.cs" />
     <Compile Include="SmtpMessageChunk.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
