--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -354,7 +354,7 @@
     <Content Include="Areas\Admin\Views\Roles\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Panel\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Join.cshtml" />
-    <Content Include="Areas\Admin\Views\Facilities\ChooseFacilities.cshtml" />
+    <Content Include="Areas\Admin\Views\BranchFacilities\ChooseFacilities.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\google-maps-nearest.js" />
     <Content Include="Scripts\google-maps.js" />
