--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -355,7 +355,7 @@
     <Content Include="Areas\Admin\Views\Panel\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Join.cshtml" />
     <Content Include="Areas\Admin\Views\BranchFacilities\ChooseFacilities.cshtml" />
-    <Content Include="Areas\Admin\Views\Bookings\CourtBookings.cshtml" />
+    <Content Include="Areas\Admin\Views\Bookings\Index.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\google-maps-nearest.js" />
     <Content Include="Scripts\google-maps.js" />
@@ -408,7 +408,7 @@
     <Content Include="Areas\Admin\Views\Bookings\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Bookings\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Bookings\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Bookings\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Bookings\Indexold.cshtml" />
     <Content Include="Areas\Admin\Views\Courts\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Courts\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Courts\Details.cshtml" />
