Bookings using form

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Areas\Admin\Controllers\TimeSlotsController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Dal\TeamProjectApp.cs" />
+    <Compile Include="ModelsViews\BranchCourtsTimeslots.cs" />
     <Compile Include="Models\BranchFacilities.cs" />
     <Compile Include="Models\BranchFacilitiesManager.cs" />
     <Compile Include="Models\FacilityFormModel.cs" />
