--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -247,7 +247,8 @@
     <Compile Include="Areas\Admin\Controllers\TimeSlotsController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Dal\TeamProjectApp.cs" />
-    <Compile Include="ModelsViews\BranchCourtsTimeslots.cs" />
+    <Compile Include="ModelsViews\BookingsSearchForm.cs" />
+    <Compile Include="ModelsViews\BookingsSearchResult.cs" />
     <Compile Include="Models\BranchFacilities.cs" />
     <Compile Include="Models\BranchFacilitiesManager.cs" />
     <Compile Include="Models\FacilityFormModel.cs" />
