add bookings popover info

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -227,6 +227,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiControllers\BookController.cs" />
+    <Compile Include="ApiControllers\BookingsController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -449,6 +450,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Views\Bookings\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
