--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -248,8 +248,10 @@
     <Compile Include="Areas\Admin\Controllers\TimeSlotsController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Dal\TeamProjectApp.cs" />
+    <Compile Include="ModelsViews\BookingInfo.cs" />
     <Compile Include="ModelsViews\BookingsSearchForm.cs" />
     <Compile Include="ModelsViews\BookingsSearchResult.cs" />
+    <Compile Include="ModelsViews\PostBookResponse.cs" />
     <Compile Include="Models\BranchFacilities.cs" />
     <Compile Include="Models\BranchFacilitiesManager.cs" />
     <Compile Include="Models\FacilityFormModel.cs" />
