Added Details in CourtsController!

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -455,6 +455,7 @@
     <Content Include="Views\Courts\Booking.cshtml" />
     <Content Include="Views\Courts\Confirmed.cshtml" />
     <Content Include="Views\Shared\_LayoutBooking.cshtml" />
+    <Content Include="Views\Courts\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
