--- a/TeamProject/Web.config
+++ b/TeamProject/Web.config
@@ -107,6 +107,10 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.5.0" newVersion="1.8.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
@@ -115,12 +119,13 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -135,8 +140,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TeamProject-20190210100007.mdf;Initial Catalog=aspnet-TeamProject-20190210100007;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="ConnectionString" connectionString="data source=ra1.anystream.eu,1010;initial catalog=xiros_george;user id=sa;password=aDifficultPassword$;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-
-  <!--<add name="ConnectionString" connectionString="data source=.\sqlexpress;initial catalog=projectdb;user id=sa;password=1234;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <!--<add name="ConnectionString" connectionString="data source=.\sqlexpress;initial catalog=projectdb;user id=sa;password=1234;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.codedom>
     <compilers>
