--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,7 @@ ASALocalRun/
 
 TeamProject/SmtpMessageChunk.cs
 TeamProject/SmtpMessageChunk.cs
+*.config
+TeamProject/Properties/Settings.Designer.cs
+TeamProject/Properties/Settings.settings
+TeamProject/Web.config
