Changed button Layout in Courts details

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Models\BookingReport.cs" />
     <Compile Include="Models\BranchFacilities.cs" />
     <Compile Include="Managers\BranchFacilitiesManager.cs" />
+    <Compile Include="Models\ContactForm.cs" />
     <Compile Include="Models\FacilityFormModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
