--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -311,10 +311,8 @@
     <Content Include="Content\Contact.css" />
     <Content Include="Content\google-maps.css" />
     <Content Include="Content\HomePage.css" />
-    <Content Include="Content\Join\images\6378943-football-wallpaper.jpg" />
-    <Content Include="Content\Join\images\6379023-football-wallpaper.jpg" />
+    <Content Include="Images\Join\6378943-football-wallpaper.jpg" />
     <Content Include="Content\Site.css" />
-    <Content Include="Content\Join\css\main.css" />
     <Content Include="Content\Join\css\util.css" />
     <Content Include="Dashboard\Dashboard.css" />
     <Content Include="favicon.ico">
@@ -491,17 +489,6 @@
     <Content Include="Content\Join\vendor\animsition\css\animsition.min.css" />
     <Content Include="Content\Join\vendor\animsition\js\animsition.js" />
     <Content Include="Content\Join\vendor\animsition\js\animsition.min.js" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-grid.css" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-grid.min.css" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-reboot.css" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-reboot.min.css" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap.css" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap.min.css" />
-    <Content Include="Content\Join\vendor\bootstrap\js\bootstrap.js" />
-    <Content Include="Content\Join\vendor\bootstrap\js\bootstrap.min.js" />
-    <Content Include="Content\Join\vendor\bootstrap\js\popper.js" />
-    <Content Include="Content\Join\vendor\bootstrap\js\popper.min.js" />
-    <Content Include="Content\Join\vendor\bootstrap\js\tooltip.js" />
     <Content Include="Content\Join\vendor\countdowntime\countdowntime.js" />
     <Content Include="Content\Join\vendor\css-hamburgers\hamburgers.css" />
     <Content Include="Content\Join\vendor\css-hamburgers\hamburgers.min.css" />
@@ -579,13 +566,7 @@
     <Content Include="Views\Shared\_HomePageFooterPartial.cshtml" />
     <Content Include="Views\Shared\FacilitiesPartial.cshtml" />
     <Content Include="Views\Join\Joinold.cshtml" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-grid.css.map" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-grid.min.css.map" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-reboot.css.map" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap.css.map" />
-    <Content Include="Content\Join\vendor\bootstrap\css\bootstrap.min.css.map" />
-    <Content Include="Views\Shared\_layoutTEst.cshtml" />
+    <Content Include="Views\Shared\_LayoutJoin.cshtml" />
     <Content Include="Views\Join\Join.cshtml" />
   </ItemGroup>
   <ItemGroup>
