Changed images in map pins

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -359,6 +359,7 @@
     <Content Include="Content\Join\js\main.js" />
     <Content Include="Content\Join\js\map-custom.js" />
     <Content Include="Images\Logo\Kick it logo.png" />
+    <Content Include="Images\Logo\KickItPin.png" />
     <Content Include="Models\DbSchema.sql" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
