--- a/TeamProject/packages.config
+++ b/TeamProject/packages.config
@@ -46,10 +46,12 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.14.3" targetFramework="net472" />
+  <package id="QRCoder" version="1.3.5" targetFramework="net472" />
   <package id="RestSharp" version="106.6.9" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.2" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
