reafactoring manager mapping using attributes...

--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -259,8 +259,7 @@
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Controllers\UserBookingController.cs" />
     <Compile Include="Controllers\JoinController.cs" />
-    <Compile Include="Dal\TableKey.cs" />
-    <Compile Include="Dal\TableExcludeField.cs" />
+    <Compile Include="Dal\TableFieldAttribute.cs" />
     <Compile Include="Dal\TeamProjectApp.cs" />
     <Compile Include="ModelsViews\PostBookResponse.cs" />
     <Compile Include="Models\BookingReport.cs" />
